# SzimatSzatyor

./: .gitignore  CMakeLists.txt  README  README.md  shared.vcxproj  szatyor.vcxproj  szimat.vcxproj  szimatszatyor.sln
src/: CMakeLists.txt
src/shared/: CMakeLists.txt  HookEntryManager.cpp  HookEntryManager.h
src/szatyor/: CMakeLists.txt  main.cpp
src/szimat/: CMakeLists.txt  ConsoleManager.h  HookManager.h  PacketDump.h  main.cpp
